# botd-integrations

./: .gitignore  readme.md
cloudflare/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
cloudflare/src/: config.ts  constants.ts  detect.ts  index.ts  injector.ts  utils.ts
cloudflare/src/detectors/: bot.ts  edge.ts  light.ts
cloudflare/src/handlers/: all.ts  init.ts
cloudflare/worker/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml.example
cloudflare/worker/src/: config.ts  constants.ts  index.ts  injector.ts  types.ts  utils.ts
cloudformation/: README.md
example-app/: Makefile  go.mod  readme.md
example-app/cmd/app/: main.go
example-app/internal/server/: login.go  server.go
example-app/static/: index.html
example-app/static/css/: style.css
example-app/static/templates/: is_bot.html  not_bot.html
fastly-wasm-integration-backend/: .ebignore  go.mod
fastly-wasm-integration-backend/static/: index.html
fastly/vcl/: README.md  boilerplate.vcl
fastly/wasm/: .gitignore  Cargo.toml  README.md  fastly.toml  readme.md  rust-toolchain
fastly/wasm/docs/: flow.md  setup.md
fastly/wasm/src/: bot_detector.rs  botd.rs  collector.rs  config.rs  constants.rs  detector.rs  edge.rs  endpoint.rs  error.rs  extractors.rs  injector.rs  light.rs  light_detector.rs  main.rs  request_id.rs  result_item.rs  utils.rs  web_utils.rs
integration-demo/: go.mod
integration-demo/static/: index.html
integration-example-app/: .ebignore  Makefile
wasm/: Cargo.toml
wasm/src/: main.rs
(+13 files in other folders)
