[package]
name = "botd-compute-edge"
version = "0.2.0"
authors = ["FingerprintJS"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.8.0"
regex = "1"
log-fastly = "0.8.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.8.3"
json = "0.12.4"
cookie = "0.15"
backtrace = "0.3.61"
psl = "2"